Bug 1064376 - Video playback fails if the used audio codec is offline-playback supported. r=roc, r=vasanth, a=lmandel